PUBMAN-1865 fixed: The latest news link is set in the properties but does not have effect
Former-commit-id: 740aaa7c4dc047f88d0bfce598f83c1c4a7de038

--- a/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
@@ -40,7 +40,7 @@
     function initialize() 
     {    	
       var feedControl = new google.feeds.FeedControl();
-      feedControl.addFeed('<h:outputText value="#{ApplicationBean.pubmanBlogFeedUrl}"/>', "");
+      feedControl.addFeed('<h:outputText value="#{ApplicationBean.pubmanBlogFeedUrl}" escape="false"/>', "");
       feedControl.setNumEntries(4);
       feedControl.setLinkTarget(google.feeds.LINK_TARGET_BLANK); 
       feedControl.draw(document.getElementById("feedControl"));
