--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -50,7 +50,6 @@
  */
 /*FONT DEFINITION*/
 /*HEADER*/
-
 /*H1*/
 h1 {
     color: #0F313E;
@@ -115,34 +114,39 @@ body .wrapper, body .footer {
 }
 
 /*FF3.x Print Issue (No more relevant in FF4)*/
-
-@media print {
-				body * {
-						overflow: visible !important;
-						float: none !important;
-						border-top: 0px #FFFFFF !important;
-						border-right: 0px #FFFFFF !important;
-						border-bottom: 0px #FFFFFF !important;
-						border-left: 0px #FFFFFF !important;
-				}
-				.itemHeader, .listItemLine, .blockHeader, .blockHeader *, .itemLine, .itemBlock, .itemBlockContent * {
-						text-align: left !important;
-						float: left !important;
-						clear: both !important;
-						text-indent: 0px !important;
-				}
-				.paginator * {
-						float: left !important;
-				}
-				.blockHeader {
-						font-size: 1.4em !important;
-						margin-bottom: 0.6em !important;
-				}
-				.min_imgBtn, .std_imgBtn, .big_imgBtn, .lineToolSection, .formButtonArea {
-						visibility: hidden !important;
-				}
+@media print {body * {
+        overflow: visible !important;
+        float: none !important;
+        border-top: 0px #FFFFFF !important;
+        border-right: 0px #FFFFFF !important;
+        border-bottom: 0px #FFFFFF !important;
+        border-left: 0px #FFFFFF !important;
 }
 
+.itemHeader, .listItemLine, .blockHeader, .blockHeader *, .itemLine, .itemBlock, .itemBlockContent * {
+        text-align: left !important;
+        float: left !important;
+        clear: both !important;
+        text-indent: 0px !important;
+}
+
+.paginator * {
+        float: left !important;
+}
+
+.blockHeader {
+        font-size: 1.4em !important;
+        margin-bottom: 0.6em !important;
+}
+
+.min_imgBtn, .std_imgBtn, .big_imgBtn, .lineToolSection, .formButtonArea {
+        visibility: hidden !important;
+}
+
+.messageArea {
+        visibility:hidden !important;
+}
+}
 
 input, button, textarea, select {
     color: #000000;
@@ -319,13 +323,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
     color: #524240;
     cursor: pointer;
 }
-
-@media print { 
-
-			.pageBrowser .actual {
-				        font-weight: normal;
-				        background-color: white;
-				}
+@media print { .pageBrowser .actual {
+        font-weight: normal;
+        background-color: white;
+}
 }
 
 .pageBrowser :disabled, .pageBrowser :disabled:hover, .pageBrowser :disabled:focus, .pageBrowser .deactivated, .pageBrowser .deactivated:hover, .pageBrowser .deactivated:focus {
@@ -594,7 +595,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .infoMessageArea {
-	border: 1px solid #56871B !important;
+    border: 1px solid #56871B !important;
     border-color: #56871B;
 }
 
@@ -603,7 +604,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .errorMessageArea {
-	border: 1px solid #E95A29 !important; 
+    border: 1px solid #E95A29 !important;
     border-color: #E95A29;
 }
 
@@ -627,9 +628,9 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .inputInfoBox, .inputInfoBox a {
-	text-align: center;
-	font-weight: bolder;
-	font-family: serif;
+    text-align: center;
+    font-weight: bolder;
+    font-family: serif;
 }
 
 /*ERROR OR WARNING MESSAGES*/
@@ -660,9 +661,9 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .inputInfoBox, .inputInfoBox a {
-	text-align: center;
-	font-weight: bolder;
-	font-family: serif;
-	border-left-width: 2px !important;
-	border-right-width: 2px !important;
+    text-align: center;
+    font-weight: bolder;
+    font-family: serif;
+    border-left-width: 2px !important;
+    border-right-width: 2px !important;
 }
