--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -137,6 +137,9 @@ body .wrapper, body .footer {
 				.min_imgBtn, .std_imgBtn, .big_imgBtn, .lineToolSection, .formButtonArea {
 						visibility: hidden !important;
 				}
+				.messageArea {
+				        visibility:hidden !important;
+}
 }
 
 
