message box removed from print layout

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -32,6 +32,12 @@
 
 /*GENERAL*/
 
+@media print {
+
+	.messageArea {display: none;}
+
+}
+
 .fullItem {
 	border-top-width: 0.19em !important;
 	border-top-style: solid;
