Font family Courier changed to improve UTF-8 display

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_AEI/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_AEI/styles/appearance.css
@@ -88,7 +88,7 @@ body, label, input, textarea, select, button, input.numberLabel, h2, h3, h6, a {
 }
 
 input[type = text], textarea {
-    font-family: Courier, "Courier New", serif;
+    font-family: "Courier New", Courier, serif;
 }
 
 h1, h4, h5 {
