--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Gradient/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Gradient/styles/appearance.css
@@ -98,7 +98,7 @@ body, label, input, textarea, select, button, input.numberLabel, h2, h3, h6, a {
 }
 
 input[type = text], textarea {
-    font-family: Courier, "Courier New", serif;
+    font-family: "Courier New", Courier, serif;
     background-image: url ('../images/input_background.gif');
 		}
 		h1, h4, h5 {
