--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -87,7 +87,7 @@ body, label, button, input.numberLabel, h2, h3, h6, a {
 }
 
 input[type = text], textarea, input, select {
-    font-family: Courier, "Courier New", serif;
+    font-family: "Courier New", Courier, serif;
 }
 
 h1, h4, h5 {
