--- a/pubman/pubman_presentation/src/main/webapp/workspaces/ReportWorkspace.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/workspaces/ReportWorkspace.jspf
@@ -63,6 +63,18 @@
 						</h:panelGroup>
 						</span>
 				</h:panelGroup>	
+				
+				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine firstLine">
+					<b class="xLarge_area0 endline labelLine">
+						<h:outputText value="#{lbl.import_workspace_format}" /><span class="noDisplay">: </span>
+					</b>
+					<span class="free_area0 endline">
+					<div class="xSmall_marginLExcl clear">
+						<h:selectOneMenu id="selFormat" value="#{ReportWorkspaceBean.format}" converter="#{ReportWorkspaceBean.formatConverter}">
+							<f:selectItems id="selFormats" value="#{ReportWorkspaceBean.outputFormats}"/>
+						</h:selectOneMenu>
+					</div>
+				</h:panelGroup>	
 			</div>
 		</div>
 
