Advanced Search for Event Start Date and Event End Date
Former-commit-id: dc277d5a0f21a4b179e8a626e61770aa33abfa7a

--- a/pubman/pubman_presentation/src/main/webapp/search/ui/DateCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/DateCriterionCollection.jspf
@@ -116,6 +116,14 @@
 							<h:selectBooleanCheckbox id="dateCriterionBean_searchCreated" value="#{dateCriterionBean.searchCreated}" />
 							<h:outputLabel id="lblDateCriterionBean_searchCreated" value="#{lbl.adv_search_lblChkType_created}" for="dateCriterionBean_searchCreated" />
 						</span>
+						<span class="large_checkbox tiny_marginRIncl">
+							<h:selectBooleanCheckbox id="dateCriterionBean_searchEventStart" value="#{dateCriterionBean.searchEventStart}" />
+							<h:outputLabel id="lblDateCriterionBean_searchEventStart" value="#{lbl.adv_search_lblChkType_event_start_date}" for="dateCriterionBean_searchEventStart" />
+						</span>
+						<span class="large_checkbox tiny_marginRIncl">
+							<h:selectBooleanCheckbox id="dateCriterionBean_searchEventEnd" value="#{dateCriterionBean.searchEventEnd}" />
+							<h:outputLabel id="lblDdateCriterionBean_searchEventEnd" value="#{lbl.adv_search_lblChkType_event_end_date}" for="dateCriterionBean_searchEventEnd" />
+						</span>
 						<a class="large_area0 tiny_marginRIncl showMoreCheckboxes" ><h:outputText value="#{lbl.adv_search_btShowMore}" /></a>
 					</span>
 				</span>
