Safer handling when no item is provided
Former-commit-id: 7ade468232d4039c9a3fbcd87616757205f99416

--- a/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
@@ -32,7 +32,7 @@
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://myfaces.apache.org/trinidad" prefix="tr" %>
 
-<h:panelGroup layout="block" styleClass="full_area0" id="editSource" rendered="#{!(genre.sources_display == 'false' && genre.sources_form_id == 'full-submission' || genre.sources_display == 'false' && genre.sources_form_id == 'all')}">
+<h:panelGroup layout="block" styleClass="full_area0" id="editSource" rendered="#{EditItem.pubItem!=null and !(genre.sources_display == 'false' && genre.sources_form_id == 'full-submission' || genre.sources_display == 'false' && genre.sources_form_id == 'all')}">
 <tr:iterator var="sourceBean" value="#{EditItemSessionBean.sources}">
 	<h:panelGroup layout="block" styleClass="full_area0 itemBlock free_area0">
 		<h3 class="xLarge_area0_p8 endline blockHeader"><h:outputText value="#{genre.sources_label}" converter="GenreLabelConverter" /><h:outputText value="#{sourceBean.position + 1}" />
