--- a/pubman/pubman_presentation/src/main/webapp/editItem/LegalCaseGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LegalCaseGroup.jspf
@@ -31,7 +31,7 @@
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://myfaces.apache.org/trinidad" prefix="tr"%>
 
-<h:panelGroup layout="block"  id="editLegalCase"  styleClass="full_area0 itemBlock" rendered="#{!(genre.legal_case_display == 'false' && genre.legal_case_form_id == 'full-submission' || genre.legal_case_display == 'false' && genre.legal_case_form_id == 'all')}">
+<h:panelGroup layout="block"  id="editLegalCase"  styleClass="full_area0 itemBlock" rendered="#{EditItem.pubItem!=null and !(genre.legal_case_display == 'false' && genre.legal_case_form_id == 'full-submission' || genre.legal_case_display == 'false' && genre.legal_case_form_id == 'all')}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
 		<h:outputText value="#{genre.legal_case_label}" converter="GenreLabelConverter"/>
 	</h3>
