--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -56,12 +56,14 @@
 						window.open('http://www.citeulike.org/posturl?url='+encodeURIComponent('<h:outputText value="#{ViewItemFull.citationURL}"/>')+'&title='+encodeURIComponent('<h:outputText value="#{lbl.ViewItemFull_lblSocialBookmarkingDescription}"/> <h:outputText converter="JavascriptEscapeConverter" value="#{ViewItemFull.pubItem.metadata.title.value}"/>'),'add','toolbar=no,width=720,height=755,scrollbars,resizable');
 					}
 				</script>
+				<!-- http://www.connotea.org/icon.png -->
 				<h:graphicImage id="imgSocialBookmarkingConnotea" title="#{lbl.ViewItemFull_lblSocialBookmarking_Connotea}" styleClass="min_imgArea sectionTool pointer" url="http://www.connotea.org/icon.png" onclick="connoteaLink();"/>
 				<script type="text/javascript">
 					function connoteaLink() {
 						window.open('http://www.connotea.org/addpopup?continue=confirm&uri='+encodeURIComponent('<h:outputText value="#{ViewItemFull.citationURL}"/>')+'&usertitle='+encodeURIComponent('<h:outputText value="#{lbl.ViewItemFull_lblSocialBookmarkingDescription}"/> <h:outputText converter="JavascriptEscapeConverter" value="#{ViewItemFull.pubItem.metadata.title.value}"/>'),'add','toolbar=no,width=720,height=755,scrollbars,resizable');
 					}
 				</script>
+				<!-- http://static.delicious.com/img/delicious.small.gif -->
 				<h:graphicImage id="imgSocialBookmarkingDelicious" title="#{lbl.ViewItemFull_lblSocialBookmarking_Delicious}" styleClass="min_imgArea sectionTool pointer" url="http://static.delicious.com/img/delicious.small.gif" onclick="deliciousLink();"/>
 				<script type="text/javascript">
 					function deliciousLink() {
@@ -96,7 +98,7 @@
 		</div>
 
 <%-- Alternative title --%>
-		<tr:iterator var="altTitle" value="#{ViewItemFull.pubItem.metadata.alternativeTitles}" binding="#{ViewItemFull.titleIterator}" varStatus="index">
+		<tr:iterator var="altTitle" value="#{ViewItemFull.pubItem.metadata.alternativeTitles}" rendered ="#{ViewItemFull.pubItem.metadata.alternativeTitles != null}" binding="#{ViewItemFull.titleIterator}" varStatus="index">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
 					<h:outputText value="#{lbl.ViewItemFull_lblAlternativeTitle}"/><span class="noDisplay">: </span>
