--- a/pubman/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
@@ -48,12 +48,12 @@
 					<h:outputText value="#{lbl.ViewItemFull_lblLocatorLocation}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<h:outputLink id="lnkLocatorLink" value="#{locator.locatorLink}" rendered="#{ViewItemFull.isStateWithdrawn == false && locator.locatorIsLink}" target="_blank" title="#{locator.file.description}">
+						<h:outputLink id="lnkLocatorLink" value="#{locator.locatorLink}" rendered="#{locator.locatorIsLink}" target="_blank" title="#{locator.file.description}">
 							<h:outputText value="#{locator.fileName}" />
 						</h:outputLink>
-						<h:outputText value="#{locator.fileName}" rendered="#{ViewItemFull.isStateWithdrawn == false && !locator.locatorIsLink}"/>
-						<h:outputText value=" (#{locator.contentCategory})" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
-						<h:outputText value="#{lbl.ViewItemFull_lblNoAccess}" rendered="#{ViewItemFull.isStateWithdrawn == true}"/>
+						<h:outputText value="#{locator.fileName}" rendered="#{!locator.locatorIsLink}"/>
+						<h:outputText value=" (#{locator.contentCategory})" />
+						<h:outputText value="#{lbl.ViewItemFull_lblNoAccess}" />
 				</span>
 			</h:panelGroup>
 <%-- Locator description --%>
@@ -62,7 +62,7 @@
 					<h:outputText value="#{lbl.ViewItemMedium_lblFileDescription}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{locator.fileDescription}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
+					<h:outputText value="#{locator.fileDescription}" />
 					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{locator.fileDescription == null  || locator.fileDescription == ''}"/>
 				</span>
 			</h:panelGroup>
