--- a/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
@@ -101,9 +101,11 @@
 				<tr:iterator var="creatorAffiliation" value="#{ViewItemFull.organizationList}" rows="0">
 					<h:panelGroup styleClass="xTiny_area0 endline"><h:outputText value="#{creatorAffiliation.position}"/></h:panelGroup>
 					<h:panelGroup id="txtCreatorAffiliation" styleClass="free_area0 affiliation">
-						<h:outputText value="#{creatorAffiliation.organizationName}"/>
+					<h:outputText value="#{creatorAffiliation.organizationDescription}"/>
+						<!--<h:outputText value="#{creatorAffiliation.organizationName}"/>
 						<h:outputText value=", #{creatorAffiliation.organizationAddress}" rendered="#{not empty creatorAffiliation.organizationAddress}"/>
 						<h:outputText value=", #{creatorAffiliation.organizationIdentifier}" rendered="#{not empty creatorAffiliation.organizationIdentifier}"/>
+						-->
 						
 						<h:panelGroup rendered="#{creatorAffiliation.hasOrganizationalIdentifier}">
 							&#160;
