--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
@@ -36,40 +36,39 @@
 		<h:outputText value="#{lbl.EditItem_lblContent}" />
 	</h3>
 	<span class="seperator"></span>
-	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline" rendered="#{ViewItemFull.pubItem.metadata.freeKeywords != null || ViewItemFull.hasAbstracts}">
+	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline" rendered="#{ViewItemFull.hasAbstracts || ViewItemFull.hasFreeKeywords}">
 
 <%-- Free keywords --%>
 		<div class="free_area0 endline itemLine noTopBorder">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				<h:outputText value="#{lbl.ViewItemFull_lblSubject}" /><span class="noDisplay">: </span>
+				<h:outputText value="#{lbl.ViewItemFull_lblSubject}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.pubItem.metadata.freeKeywords.value}" converter="HTMLEscapeConverter" escape="false"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.freeKeywords.value == null || ViewItemFull.pubItem.metadata.freeKeywords.value == ''}"/>
+				<h:outputText value="#{ViewItemFull.pubItem.metadata.freeKeywords.value}" converter="HTMLEscapeConverter" escape="false" rendered="#{ViewItemFull.hasFreeKeywords}"/>
+				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{!ViewItemFull.hasFreeKeywords}"/>
 			</span>
 		</div>
 
 <%-- Subject --%>
-		<tr:iterator var="subject" value="#{ViewItemFull.pubItem.metadata.subjects}">
+		<tr:iterator var="subject" value="#{ViewItemFull.pubItem.metadata.subjects}" rendered="#{ViewItemFull.hasSubjects}">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
 					&#160;<h:outputText value="#{subject.type}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{subject.value}" />
-					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{subject.value == null || subject.value == ''}"/>
 				</span>
 			</h:panelGroup>
 		</tr:iterator>
 
 <%-- Abstract --%>
-		<tr:iterator var="abstract" value="#{ViewItemFull.pubItem.metadata.abstracts}" binding="#{ViewItemFull.abstractIterator}" varStatus="index">
+		<tr:iterator var="abstract" value="#{ViewItemFull.pubItem.metadata.abstracts}" binding="#{ViewItemFull.abstractIterator}" varStatus="index" rendered="#{ViewItemFull.hasAbstracts}">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
 					&#160;<h:outputText value="#{lbl.ViewItemFull_lblAbstract}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{abstract.value}" escape="false"/>
+					<h:outputText value="#{abstract.value}" converter="HTMLSubSupConverter" escape="false"/>
 				</span>
 			</h:panelGroup>
 		</tr:iterator>
