--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -101,11 +101,17 @@
 		<tr:iterator var="altTitle" value="#{ViewItemFull.pubItem.metadata.alternativeTitles}" rendered ="#{ViewItemFull.pubItem.metadata.alternativeTitles != null}" binding="#{ViewItemFull.titleIterator}" varStatus="index">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					<h:outputText value="#{lbl.ViewItemFull_lblAlternativeTitle}"/><span class="noDisplay">: </span>
+					<h:outputText value="#{lbl.ViewItemFull_lblAlternativeTitle}" rendered="#{altTitle.type ==null}"/>
+					<h:outputText value="#{lbl.ENUM_ALTERNATIVETITLETYPE_ABBREVIATION}" rendered="#{altTitle.type!=null and ViewItemFull.enum_alternativetitletype_abbreviation == altTitle.type}"/>
+					<h:outputText value="#{lbl.ENUM_ALTERNATIVETITLETYPE_OTHER}" rendered="#{altTitle.type!=null and ViewItemFull.enum_alternativetitletype_other == altTitle.type}"/>
+					<h:outputText value="#{lbl.ENUM_ALTERNATIVETITLETYPE_HTML}" rendered="#{altTitle.type!=null and ViewItemFull.enum_alternativetitletype_html == altTitle.type}"/>
+					<h:outputText value="#{lbl.ENUM_ALTERNATIVETITLETYPE_MATHML}" rendered="#{altTitle.type!=null and ViewItemFull.enum_alternativetitletype_mathml == altTitle.type}"/>
+					<h:outputText value="#{lbl.ENUM_ALTERNATIVETITLETYPE_LATEX}" rendered="#{altTitle.type!=null and ViewItemFull.enum_alternativetitletype_latex == altTitle.type}"/>
+					<span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{altTitle.value}" rendered="#{altTitle.value != ''}"  converter="HTMLSubSupConverter" escape="false"/>
-					<h:outputText value="&#160;" rendered="#{altTitle.value == ''}" escape="false"/>
+					<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{altTitle.value == ''}" escape="false"/>
 				</span>
 			</h:panelGroup>
 		</tr:iterator>	
